--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<html><body><h1>Mappa Interattiva Placeholder</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8"/>
+<title>Mappa Verona - MapLibre</title>
+<link rel="stylesheet" href="style.css"/>
+<link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet" />
+</head>
+<body>
+<div id="sidebar">
+  <h2>Materiale Operativo</h2>
+  <div id="docs">PDF in arrivo</div>
+  <h2>Legenda</h2>
+  <ul>
+    <li><span class="marker c1"></span> Farmacie</li>
+    <li><span class="marker c2"></span> Medici</li>
+  </ul>
+</div>
+<div id="map"></div>
+<script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
