--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
-<meta charset="utf-8">
-<title>Verona Futuristic Map</title>
-<link rel="stylesheet" href="style.css">
-<link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet">
+  <meta charset="utf-8" />
+  <title>Mappa Verona – SpG</title>
+
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
+
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"
+  />
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div id="sidebar">Materiale Operativo<br/>PDF in arrivo</div>
+
+<div id="sidebar">
+  <h2>Materiale Operativo</h2>
+  <div>PDF in arrivo</div>
+</div>
+
 <div id="map"></div>
-<script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
