--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>Mappa Verona – Test Base</title>
+  <title>Mappa Verona</title>
 
   <link
     rel="stylesheet"
@@ -11,8 +11,9 @@
 
   <style>
     html, body {
-      height: 100%;
       margin: 0;
+      height: 100%;
+      background: #000;
     }
     #map {
       height: 100%;
@@ -25,7 +26,22 @@
 <div id="map"></div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="script.js"></script>
+<script>
+  const map = L.map('map').setView([45.4384, 10.9916], 11);
+
+  L.tileLayer(
+    'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+    {
+      subdomains: 'abcd',
+      maxZoom: 19
+    }
+  ).addTo(map);
+
+  L.marker([45.4384, 10.9916]).addTo(map)
+    .bindPopup('VERONA')
+    .openPopup();
+</script>
 
 </body>
 </html>
+
