--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
 <script>
   const map = L.map('map').setView([45.4384, 10.9916], 11);
 
-  L.tileLayer(
-    'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+L.tileLayer(
+  'https://tile.openstreetmap.org/{z}/{x}/{y}.png',
+  {
+    maxZoom: 19
+  }
+).addTo(map);
     {
       subdomains: 'abcd',
       maxZoom: 19
