--- a/index.html
+++ b/index.html
@@ -1,52 +1,10 @@
-<!DOCTYPE html>
-<html lang="it">
+<!doctype html>
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Mappa Verona</title>
-
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
-
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      background: #000;
-    }
-    #map {
-      height: 100%;
-      width: 100%;
-    }
-  </style>
+  <title>TEST</title>
 </head>
-<body>
-
-<div id="map"></div>
-
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script>
-  const map = L.map('map').setView([45.4384, 10.9916], 11);
-
-L.tileLayer(
-  'https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png',
-  {
-    subdomains: 'abc',
-    maxZoom: 19
-  }
-).addTo(map);
-    {
-      subdomains: 'abcd',
-      maxZoom: 19
-    }
-  ).addTo(map);
-
-  L.marker([45.4384, 10.9916]).addTo(map)
-    .bindPopup('VERONA')
-    .openPopup();
-</script>
-
+<body style="margin:0; background:red; color:white; font-size:40px;">
+  SE VEDI QUESTO, GITHUB PAGE FUNZIONA
 </body>
 </html>
-
