--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>TEST</title>
+  <title>Mappa Verona</title>
+
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
+
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+    }
+    #map {
+      height: 100%;
+      width: 100%;
+    }
+  </style>
 </head>
-<body style="margin:0; background:red; color:white; font-size:40px;">
-  SE VEDI QUESTO, GITHUB PAGE FUNZIONA
+<body>
+
+<div id="map"></div>
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script>
+  const map = L.map('map').setView([45.4384, 10.9916], 10);
+
+  L.gridLayer({
+    createTile: function () {
+      const tile = document.createElement('div');
+      tile.style.outline = '1px solid #333';
+      tile.style.background = '#111';
+      return tile;
+    }
+  }).addTo(map);
+
+  L.marker([45.4384, 10.9916]).addTo(map)
+    .bindPopup('VERONA')
+    .openPopup();
+</script>
+
 </body>
 </html>
