--- a/index.html
+++ b/index.html
@@ -5,13 +5,57 @@
   <title>Mappa Verona – Demo</title>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <link rel="stylesheet" href="style.css"/>
+
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+      background: #000;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
+
+    #map {
+      height: 100%;
+      width: 100%;
+      background: #0b0b0b;
+    }
+
+    /* HUD stile videogioco */
+    #hud {
+      position: absolute;
+      bottom: 24px;
+      left: 24px;
+      padding: 14px 18px;
+      background: rgba(12,12,12,0.85);
+      border-left: 3px solid #00ff9c;
+      min-width: 220px;
+      pointer-events: none;
+    }
+
+    .hud-title {
+      font-size: 22px;
+      letter-spacing: 3px;
+      font-weight: 600;
+      color: #e6e6e6;
+    }
+
+    .hud-sub {
+      margin-top: 6px;
+      font-size: 12px;
+      color: #9a9a9a;
+      text-transform: uppercase;
+    }
+
+    /* garantisce la manina */
+    .leaflet-interactive {
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
 <div id="map"></div>
 
-<!-- HUD stile gioco -->
 <div id="hud">
   <div class="hud-title">VERONA</div>
   <div class="hud-sub">Comune selezionato</div>
@@ -19,7 +63,7 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  // MAPPA BASE – NO TILE ESTERNE
+  // MAPPA BASE (100% locale)
   const map = L.map('map', {
     zoomControl: true,
     attributionControl: false,
@@ -29,14 +73,14 @@
   const bounds = [[0,0],[1000,1000]];
   map.fitBounds(bounds);
 
-  // Sfondo
+  // sfondo
   L.rectangle(bounds, {
     fillColor: '#0b0b0b',
     fillOpacity: 1,
     stroke: false
   }).addTo(map);
 
-  // Confine semplificato (Verona)
+  // CONFINE "VERONA" (organico, non quadrato)
   const verona = [
     [350, 620],
     [380, 680],
@@ -52,6 +96,38 @@
     [370, 580]
   ];
 
-  // Ombra (pseudo-3D)
+  // OMBRA (pseudo-3D)
   L.polygon(
-    verona
+    verona.map(p => [p[0] + 8, p[1] - 8]),
+    {
+      fillColor: '#000',
+      fillOpacity: 0.35,
+      stroke: false
+    }
+  ).addTo(map);
+
+  // POLIGONO PRINCIPALE
+  const areaVerona = L.polygon(verona, {
+    color: '#00ff9c',
+    weight: 2,
+    fillColor: '#00ff9c',
+    fillOpacity: 0.18
+  }).addTo(map);
+
+  // INTERAZIONI
+  areaVerona
+    .on('mouseover', () => {
+      areaVerona.setStyle({ fillOpacity: 0.32 });
+    })
+    .on('mouseout', () => {
+      areaVerona.setStyle({ fillOpacity: 0.18 });
+    })
+    .on('click', () => {
+      document.querySelector('.hud-title').innerText = 'VERONA';
+      document.querySelector('.hud-sub').innerText = 'Comune selezionato';
+    });
+</script>
+
+</body>
+</html>
+
