--- a/index.html
+++ b/index.html
@@ -63,6 +63,39 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
+  const map = L.map('map', {
+    zoomControl: true,
+    attributionControl: false
+  }).setView([45.43, 10.99], 11);
+
+  // sfondo nero (senza tile)
+  L.rectangle([[45.1,10.6],[45.6,11.3]], {
+    fillColor: '#0b0b0b',
+    fillOpacity: 1,
+    stroke: false
+  }).addTo(map);
+
+  fetch('data/comuni.geojson')
+    .then(r => r.json())
+    .then(data => {
+
+      const layer = L.geoJSON(data, {
+        style: {
+          color: '#00ff9c',
+          weight: 1.5,
+          fillOpacity: 0
+        },
+        onEachFeature: (feature, layer) => {
+          layer.on('click', () => {
+            map.fitBounds(layer.getBounds(), { padding:[40,40] });
+            document.querySelector('.hud-title').innerText = feature.properties.nome;
+            document.querySelector('.hud-sub').innerText = 'Comune selezionato';
+          });
+        }
+      }).addTo(map);
+
+    });
+</script>
   // MAPPA BASE (100% locale)
   const map = L.map('map', {
     zoomControl: true,
