--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     stroke: false
   }).addTo(map);
 
-  fetch('data/comuni.geojson')
+  fetch('data/comuni_verona.json')
     .then(r => r.json())
     .then(data => {
 
