--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     /* HUD stile videogioco */
     #hud {
       position: absolute;
-      bottom: 24px;
+      top: 24px;
       left: 24px;
       padding: 14px 18px;
       background: rgba(12,12,12,0.85);
       border-left: 3px solid #00ff9c;
-      min-width: 220px;
+      min-width: 240px;
       pointer-events: none;
     }
 
     .hud-title {
-      font-size: 22px;
-      letter-spacing: 3px;
+      font-size: 20px;
+      letter-spacing: 2px;
       font-weight: 600;
       color: #e6e6e6;
     }
@@ -46,7 +46,7 @@
       text-transform: uppercase;
     }
 
-    /* garantisce la manina */
+    /* manina */
     .leaflet-interactive {
       cursor: pointer;
     }
@@ -57,8 +57,8 @@
 <div id="map"></div>
 
 <div id="hud">
-  <div class="hud-title">VERONA</div>
-  <div class="hud-sub">Comune selezionato</div>
+  <div class="hud-title">Provincia di Verona</div>
+  <div class="hud-sub">Seleziona un comune</div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -66,116 +66,81 @@
   const map = L.map('map', {
     zoomControl: true,
     attributionControl: false
-  }).setView([45.43, 10.99], 11);
+  }).setView([45.43, 10.99], 10);
 
-  // sfondo nero (senza tile)
-  L.rectangle([[45.1,10.6],[45.6,11.3]], {
+  /* sfondo nero */
+  L.rectangle([[45.1,10.6],[45.7,11.4]], {
     fillColor: '#0b0b0b',
     fillOpacity: 1,
     stroke: false
   }).addTo(map);
+
+  let selectedLayer = null;
 
   fetch('data/comuni_verona.json')
     .then(r => r.json())
     .then(data => {
 
-      const layer = L.geoJSON(data, {
+      /* OMBRA – simil 3D */
+      L.geoJSON(data, {
+        style: {
+          color: '#000',
+          weight: 4,
+          opacity: 0.35
+        }
+      }).addTo(map);
+
+      /* COMUNI */
+      const comuniLayer = L.geoJSON(data, {
         style: {
           color: '#00ff9c',
-          weight: 1.5,
+          weight: 1,
+          opacity: 0.9,
           fillOpacity: 0
         },
         onEachFeature: (feature, layer) => {
+
+          layer.on('mouseover', () => {
+            if (layer !== selectedLayer) {
+              layer.setStyle({ color: '#ffffff', weight: 2 });
+            }
+          });
+
+          layer.on('mouseout', () => {
+            if (layer !== selectedLayer) {
+              layer.setStyle({ color: '#00ff9c', weight: 1 });
+            }
+          });
+
           layer.on('click', () => {
-            map.fitBounds(layer.getBounds(), { padding:[40,40] });
-            document.querySelector('.hud-title').innerText = feature.properties.nome;
+
+            if (selectedLayer) {
+              selectedLayer.setStyle({
+                color: '#00ff9c',
+                weight: 1
+              });
+            }
+
+            selectedLayer = layer;
+
+            layer.setStyle({
+              color: '#ffffff',
+              weight: 3
+            });
+
+            map.fitBounds(layer.getBounds(), { padding: [40,40] });
+
+            const nome = feature.properties.nome || feature.properties.name || 'Comune';
+            document.querySelector('.hud-title').innerText = nome;
             document.querySelector('.hud-sub').innerText = 'Comune selezionato';
           });
         }
       }).addTo(map);
 
+      map.fitBounds(comuniLayer.getBounds());
+
     });
-</script>
-  // MAPPA BASE (100% locale)
-  const map = L.map('map', {
-    zoomControl: true,
-    attributionControl: false,
-    crs: L.CRS.Simple
-  });
-
-  const bounds = [[0,0],[1000,1000]];
-  map.fitBounds(bounds);
-
-  // sfondo
-  L.rectangle(bounds, {
-    fillColor: '#0b0b0b',
-    fillOpacity: 1,
-    stroke: false
-  }).addTo(map);
-
-  // CONFINE "VERONA" (organico, non quadrato)
-  const verona = [
-    [350, 620],
-    [380, 680],
-    [440, 720],
-    [510, 710],
-    [560, 660],
-    [590, 610],
-    [580, 560],
-    [540, 520],
-    [500, 500],
-    [450, 505],
-    [410, 540],
-    [370, 580]
-  ];
-
-  // OMBRA (pseudo-3D)
-  L.polygon(
-    verona.map(p => [p[0] + 8, p[1] - 8]),
-    {
-      fillColor: '#000',
-      fillOpacity: 0.35,
-      stroke: false
-    }
-  ).addTo(map);
-
-  // POLIGONO PRINCIPALE
-  const areaVerona = L.polygon(verona, {
-    color: '#00ff9c',
-    weight: 2,
-    fillColor: '#00ff9c',
-    fillOpacity: 0.18
-  }).addTo(map);
-
- let selected = false;
-
-areaVerona
-  .on('mouseover', () => {
-    if (!selected) {
-      areaVerona.setStyle({ fillOpacity: 0.30 });
-    }
-  })
-  .on('mouseout', () => {
-    if (!selected) {
-      areaVerona.setStyle({ fillOpacity: 0.18 });
-    }
-  })
-  .on('click', () => {
-    selected = true;
-
-    // evidenziazione netta
-    areaVerona.setStyle({
-      fillOpacity: 0.45,
-      weight: 3
-    });
-
-    // aggiorna HUD
-    document.querySelector('.hud-title').innerText = 'VERONA';
-    document.querySelector('.hud-sub').innerText = 'COMUNE SELEZIONATO';
-  });
-
 </script>
 
 </body>
 </html>
-
