--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -18,7 +17,6 @@
     #map {
       position: absolute;
       inset: 0;
-      background: #0b0b0b;
       z-index: 1;
     }
 
@@ -60,7 +58,9 @@
       pointer-events: none;
     }
 
-    .leaflet-interactive { cursor: pointer; }
+    .leaflet-interactive {
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -76,18 +76,20 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
+  /* MAPPA */
   const map = L.map('map', {
     zoomControl: true,
     attributionControl: false
-    // zoom iniziale più vicino
-  }).setView([45.43, 10.99], 10.2);
+  }).setView([45.43, 10.99], 11); // zoom iniziale più vicino
 
-  /* SFONDO NERO */
-  L.rectangle([[45.1,10.6],[45.7,11.4]], {
-    fillColor: '#0b0b0b',
-    fillOpacity: 1,
-    stroke: false
-  }).addTo(map);
+  /* BASEMAP SCURA */
+  L.tileLayer(
+    'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+    {
+      maxZoom: 19,
+      attribution: ''
+    }
+  ).addTo(map);
 
   let selectedLayer = null;
   let labels = [];
@@ -121,7 +123,7 @@
             feature.properties.DENOM_COM ||
             'Comune';
 
-          /* ETICHETTA (zoom OUT) */
+          /* ETICHETTA (ZOOM OUT) */
           const center = layer.getBounds().getCenter();
           const label = L.marker(center, {
             interactive: false,
@@ -172,7 +174,7 @@
       function updateLabels() {
         const z = map.getZoom();
         labels.forEach(l => {
-          if (z <= 10.5) {
+          if (z <= 11) {
             l.addTo(map);
           } else {
             map.removeLayer(l);
