--- a/index.html
+++ b/index.html
@@ -1,60 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>Mappa Verona</title>
+  <title>Mappa Verona – test</title>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
 
   <style>
     html, body {
       margin: 0;
       height: 100%;
-      background: #000;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
 
     #map {
-      position: absolute;
-      inset: 0;
-      z-index: 1;
+      width: 100%;
+      height: 100%;
+      background: #000;
     }
 
-    /* HUD SEMPRE IN PRIMO PIANO */
     #hud {
       position: fixed;
       top: 20px;
       left: 20px;
       z-index: 9999;
-      padding: 16px 18px;
-      background: rgba(10,10,10,0.92);
+      padding: 12px 16px;
+      background: rgba(0,0,0,0.85);
+      color: #fff;
       border-left: 4px solid #00ff9c;
-      min-width: 280px;
-      max-width: 300px;
-      pointer-events: none;
-    }
-
-    .hud-title {
-      font-size: 20px;
-      font-weight: 650;
-      letter-spacing: 1px;
-      color: #ffffff;
-      line-height: 1.25;
-    }
-
-    .hud-sub {
-      margin-top: 8px;
-      font-size: 13px;
-      color: #b3b3b3;
-      line-height: 1.35;
-    }
-
-    /* ETICHETTE COMUNI */
-    .label-comune {
-      color: rgba(235,235,235,0.85);
-      font-size: 11.5px;
-      white-space: nowrap;
-      text-shadow: 0 0 5px rgba(0,0,0,0.95);
+      font-family: system-ui, sans-serif;
       pointer-events: none;
     }
 
@@ -68,123 +45,41 @@
 <div id="map"></div>
 
 <div id="hud">
-  <div class="hud-title">Provincia di Verona</div>
-  <div class="hud-sub">
-    Vista generale — seleziona un comune
-  </div>
+  <b>TEST BASEMAP</b><br/>
+  Se vedi strade → OK
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  /* MAPPA */
   const map = L.map('map', {
-    zoomControl: true,
-    attributionControl: false
-  }).setView([45.43, 10.99], 11); // zoom iniziale più vicino
+    zoomControl: true
+  }).setView([45.43, 10.99], 11);
 
-  /* BASEMAP SCURA */
-  L.tileLayer(
+  // === BASEMAP CHIARA (OSM) ===
+  const osm = L.tileLayer(
+    'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+    {
+      maxZoom: 19
+    }
+  );
+
+  // === BASEMAP SCURA (CARTO) ===
+  const dark = L.tileLayer(
     'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
     {
-      maxZoom: 19,
-      attribution: ''
+      maxZoom: 19
     }
-  ).addTo(map);
+  );
 
-  let selectedLayer = null;
-  let labels = [];
+  // carichiamo PRIMA la chiara
+  osm.addTo(map);
 
-  fetch('data/comuni_verona.json')
-    .then(r => r.json())
-    .then(data => {
+  // switch manuale dopo 2 secondi (per test)
+  setTimeout(() => {
+    map.removeLayer(osm);
+    dark.addTo(map);
+  }, 2000);
 
-      /* OMBRA / PROFONDITÀ */
-      L.geoJSON(data, {
-        style: {
-          color: '#000',
-          weight: 4,
-          opacity: 0.3
-        }
-      }).addTo(map);
-
-      /* COMUNI */
-      const comuniLayer = L.geoJSON(data, {
-        style: {
-          color: '#00ff9c',
-          weight: 1,
-          opacity: 0.9,
-          fillOpacity: 0
-        },
-        onEachFeature: (feature, layer) => {
-
-          const nome =
-            feature.properties.nome ||
-            feature.properties.name ||
-            feature.properties.DENOM_COM ||
-            'Comune';
-
-          /* ETICHETTA (ZOOM OUT) */
-          const center = layer.getBounds().getCenter();
-          const label = L.marker(center, {
-            interactive: false,
-            icon: L.divIcon({
-              className: 'label-comune',
-              html: nome,
-              iconSize: [140, 16]
-            })
-          });
-          labels.push(label);
-          label.addTo(map);
-
-          /* HOVER */
-          layer.on('mouseover', () => {
-            if (layer !== selectedLayer) {
-              layer.setStyle({ color:'#ffffff', weight:2 });
-            }
-          });
-
-          layer.on('mouseout', () => {
-            if (layer !== selectedLayer) {
-              layer.setStyle({ color:'#00ff9c', weight:1 });
-            }
-          });
-
-          /* CLICK */
-          layer.on('click', () => {
-            if (selectedLayer) {
-              selectedLayer.setStyle({ color:'#00ff9c', weight:1 });
-            }
-
-            selectedLayer = layer;
-            layer.setStyle({ color:'#ffffff', weight:3 });
-
-            map.fitBounds(layer.getBounds(), { padding:[40,40] });
-
-            document.querySelector('.hud-title').innerText =
-              'Comune di ' + nome;
-            document.querySelector('.hud-sub').innerText =
-              'Referenti territoriali: —';
-          });
-        }
-      }).addTo(map);
-
-      map.fitBounds(comuniLayer.getBounds());
-
-      /* MOSTRA / NASCONDI NOMI */
-      function updateLabels() {
-        const z = map.getZoom();
-        labels.forEach(l => {
-          if (z <= 11) {
-            l.addTo(map);
-          } else {
-            map.removeLayer(l);
-          }
-        });
-      }
-
-      map.on('zoomend', updateLabels);
-      updateLabels();
-    });
 </script>
 
 </body>
